[refactor] import문 단순화 (#377)