@@ -1,9 +1,6 @@
 package org.sopt.app.application.poke;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Random;
-import java.util.stream.Collectors;
+import java.util.*;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
 import org.sopt.app.domain.entity.poke.PokeMessage;
@@ -35,7 +32,7 @@ public class PokeMessageService {
         Collections.shuffle(messages, new Random());
         return messages.stream()
                 .limit(MESSAGES_QUANTITY_AT_ONCE)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public PokeMessage getFixedMessage() {
